Bug 580 - Hmmm, I'm overflowing on the mac.
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@1642 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/content/css/dialog.css
+++ b/feathers/rubberducky/content/css/dialog.css
@@ -224,7 +224,7 @@ TEXTBOXES for dialogs and forms.
 
 .dialog_textbox input
 {
-  height: 22px !important;
+  height: 18px !important;
   padding: 0px 0px 0px 0px !important;
 }
 
